tests/typing/bad/testfile-extends-6.scala

class C extends Nothing {}
object Main { def main(args: Array[String]) { } }
